fixed dark mode on orders merchant

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -49,6 +49,7 @@ a {
   text-decoration: none;
 }
 
+
 hr.solid {
   border-top: 2px solid #bbb;
   border-left: 0px;
@@ -91,8 +92,11 @@ color: var(--text-color);
 
 td > a{
   color: var(--text-color);
-  }
+}
 
+small {
+  color: var(--text-color)
+}
 
 label{
   color: var(--text-color); 
@@ -101,7 +105,7 @@ label{
 }
 button, input[type="submit"], input[type="reset"] {
 	background: none;
-	color: inherit;
+	color: var(--text-color);
 	border: none;
 	padding: 0;
 	font: inherit;
