--- a/assets/css/merchant/order-items.css
+++ b/assets/css/merchant/order-items.css
@@ -23,6 +23,7 @@
 
 .order-item > .info > .name {
   margin-left: 10px;
+  color: var(--text-color);
 }
 
 .order-item > .values {
